# Video_Transcriber

./: .gitignore  gemini_test.py  main.py  processor.py  pyproject.toml  transcriber.py
app/: main.py
app/core/: config.py
app/services/: processor.py  summarizer.py  transcriber.py
